Fixed alignment issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -122,7 +122,6 @@ input[name="submitBtn"] {
 }
 
 .post-area {
-    margin-left: 30px;
     margin-top: 30px;
 }
 
@@ -132,6 +131,8 @@ input[name="submitBtn"] {
     background-color: #4c4c4c;
     display: block;
     margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 10px;
     width: 70%
 }
